--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,3 +1,6 @@
 body {
-    background-color: rgb(161, 161, 161);
+    background-color: rgb(105, 105, 105); 
+    h1 {
+        color: rgb(255, 255, 255);
+    }
 }
