Dodanie gałęzi testowej

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,4 +3,14 @@ body {
     h1 {
         color: rgb(255, 255, 255);
     }
+    h2 {
+        color: yellow;
+    }
+    a {
+        color: pink;
+        text-decoration: none;
+    }
+    ul {
+        list-style: none;
+    }
 }
